[package]
name = "mycelite-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mycelite_bridge"
path = "src/bin/mycelite_bridge/main.rs"


[dependencies]
rdkafka = "0.29"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
# mycelite-dynamic = { path =  "./mycelite"  }
